--- a/content/post/2020-06-19-ICTC-3104-3.md
+++ b/content/post/2020-06-19-ICTC-3104-3.md
@@ -4,11 +4,5 @@ title: ICTC 3104.3 Data Analytics and Big Data
 ---
 
 
-Topics:
 
-1. Introduction: Data Analysis with R
-
-2. Data Wrangling 
-
-3. Data Visualisation 
-
+[⚠️](/ictc2020/)
