--- a/content/ictc2020.md
+++ b/content/ictc2020.md
@@ -5,12 +5,12 @@ title: ICTC 3104.3 Data Analytics and Big Data
 
 1. Introduction to Data Analysis with R
 
->   🧭 [Slides](/slides/l1.html) 💻 Labwork  🔖 Chatsheet  📚 Reading
+>   🧭 [Slides](/slides/l1.html) 💻 Labwork  🔖 Cheat sheet 📚 Reading
 
 2. Data Wrangling with R
 
-> 🧭 Slides   💻 Labwork  🔖 Chatsheet  📚 Reading
+> 🧭 Slides   💻 Labwork  🔖 Cheat sheet  📚 Reading
 
 3. Data Visualisation with R
 
-> 🧭 Slides  💻 Labwork  🔖 Chatsheet  📚 Reading
+> 🧭 Slides  💻 Labwork  🔖 Cheat sheet   📚 Reading
