--- a/content/ictc2020.md
+++ b/content/ictc2020.md
@@ -3,14 +3,17 @@ date: "2016-05-05T21:48:51-07:00"
 title: ICTC 3104.3 Data Analytics and Big Data 
 ---
 
-1. Introduction to Data Analysis with R
+1. Introduction and Basics of R Programming
 
->   🧭 [Slides](/slides/l1.html) 💻 Labwork  🔖 Cheat sheet 📚 Reading
+>   📚 [Slides](/slides/ictc2020_l1.html) 💻 Lab-work  🔖 Cheat sheet 
 
-2. Data Wrangling with R
 
-> 🧭 Slides   💻 Labwork  🔖 Cheat sheet  📚 Reading
+2. Data Import and Data Wrangling with R
+
+> 📚 [Slides](/slides/ictc2020_l2.html)   💻 Lab-work  🔖 Cheat sheet  
+
 
 3. Data Visualisation with R
 
-> 🧭 Slides  💻 Labwork  🔖 Cheat sheet   📚 Reading
+> 📚 Slides  💻 Lab-work  🔖 Cheat sheet   
+
