--- a/public/slides/ictc2020_l1.Rmd
+++ b/public/slides/ictc2020_l1.Rmd
@@ -98,13 +98,13 @@ p + facet_wrap(~continent) +
 
 # What is R? 
 
-- R is a software environment for statistical computing and graphics
+- R is a software environment for statistical computing and graphics.
 
-- Language designers: **R**oss Ihaka and **R**obert Gentleman at the University of Auckland, New Zealand
+- Language designers: **R**oss Ihaka and **R**obert Gentleman at the University of Auckland, New Zealand.
 
 - Parent language: S
 
-- The latest R version 3.6.2 has been released on 2019-12-12
+- The latest R version 4.0.0 has been released on 2020-04-24.
 
 ![description of the image](RobertandRoss.jpg)
 
@@ -243,7 +243,7 @@ b
 
 - `ls()` can be used to display the names of the objects which are currently stored within R.
 
-- The collection of objects currently stored is called the **workspace**
+- The collection of objects currently stored is called the **workspace**.
 
 ```{r, comment=NA}
 ls()
@@ -505,7 +505,7 @@ is.vector(first_vec)
 ```
 
 
-- charactor vector: `is.charactor()`
+- character vector: `is.character()`
 
 ```{r, comment=NA}
 is.character(first_vec)
@@ -609,7 +609,7 @@ c(y1, y2)
 
 ### Simplifying vector creation
 
-- colon `:` produce regular spaced ascending or descending sequences.
+- colon `:` produces regular spaced ascending or descending sequences.
 
 ```{r, comment=NA}
  10:16
@@ -703,7 +703,7 @@ y %in% x
 ## Vector arithmetic
 
 
-- operations are perfored element by element. 
+- operations are performed element by element. 
 
 ```{r, comment=NA}
 c(10, 100, 100) + 2 # two is added to every element in the vector
@@ -886,7 +886,7 @@ corona
 ```
 
 
-To check if it is a datafrme
+To check if it is a dataframe
 
 ```{r, comment=NA}
 is.data.frame(corona)
@@ -996,7 +996,7 @@ Use	the	R	dataset	“gapminder”	to	answer	the	following	questions:
 
 6. Create a single vector (a new object) called ‘LifeExpectancy’ containing the values in `lifeExp` in gapminder.
 
-7. How many countires in Asia had `lifeExp` larger than 30 in 1952?
+7. How many countries in Asia had `lifeExp` larger than 30 in 1952?
 
 ```{r, echo=FALSE}
 library(countdown)
