--- a/public/slides/ictc2020_l2.Rmd
+++ b/public/slides/ictc2020_l2.Rmd
@@ -1,8 +1,7 @@
 ---
 title: "ICTC 3104.3 Data Analytics and Big Data"
 subtitle: "Data Import and Data Wrangling with R"
-author: Dr Thiyanga Talagala
-date: "Dr Chitraka Wickramarachchi"
+date: "2020-06-20"
 output:
   xaringan::moon_reader:
     chakra: libs/remark-latest.min.js
