--- a/static/slides/ictc2020_l2.Rmd
+++ b/static/slides/ictc2020_l2.Rmd
@@ -24,9 +24,9 @@ options(htmltools.dir.version = FALSE)
 
 # Outline
 
-1. Basics of R Programming
+1. Basics of R Programming ✅
 
-2. Data Import
+2. Data Import ⚙️
 
 3. Data Wrangling
 
@@ -220,11 +220,11 @@ mydata <- read_xlsx("file_path")
 ---
 # Outline
 
-1. Basics of R Programming
+1. Basics of R Programming ✅
 
-2. Data Import
+2. Data Import ✅
 
-3. Data Wrangling
+3. Data Wrangling ⚙️
 
 4. Data Visualization
 
