--- a/public/slides/ictc2020_l1.Rmd
+++ b/public/slides/ictc2020_l1.Rmd
@@ -1019,7 +1019,7 @@ class: center, middle
 
 All rights reserved by 
 
-[Dr Thiyanga S. Talagala](https://thiyanga.netlify.app/) 
+[Dr. Thiyanga S. Talagala](https://thiyanga.netlify.app/) 
 
 and 
 
