--- a/static/slides/ictc2020_l2.Rmd
+++ b/static/slides/ictc2020_l2.Rmd
@@ -1086,7 +1086,7 @@ class: center, middle
 
 All rights reserved by 
 
-[Dr Thiyanga S. Talagala](https://thiyanga.netlify.app/) 
+[Dr. Thiyanga S. Talagala](https://thiyanga.netlify.app/) 
 
 and 
 
