--- a/content/ictc2020.md
+++ b/content/ictc2020.md
@@ -3,16 +3,16 @@ date: "2016-05-05T21:48:51-07:00"
 title: ICTC 3104.3 Data Analytics and Big Data 
 ---
 
-1. Introduction and Basics of R Programming
+1) Introduction and Basics of R Programming
 
 >   📚 [Slides](/slides/ictc2020_l1.html) 💻 Lab-work  🔖 [Cheat sheet](/Cheatsheets/base-r.pdf)
 
-2. Data Import and Data Wrangling with R
+2) Data Import and Data Wrangling with R
 
 > 📚 [Slides](/slides/ictc2020_l2.html)   💻 Lab-work  🔖 [Cheat sheet](/Cheatsheets/data-wrangling-cheatsheet.pdf) 
 
 
-3. Data Visualisation with R
+3) Data Visualisation with R
 
 > 📚 Slides  💻 Lab-work  🔖 [Cheat sheet](/Cheatsheets/ggplot2-cheatsheet.pdf) 
 
