--- a/content/ictc2020.md
+++ b/content/ictc2020.md
@@ -3,6 +3,8 @@ date: "2016-05-05T21:48:51-07:00"
 title: ICTC 3104.3 Data Analytics and Big Data 
 ---
 
+👉 [Help guide Install R and R studio](/slides/installation.md)
+
 1) Introduction and Basics of R Programming
 
 >   📚 [Slides](/slides/ictc2020_l1.html) 💻 Lab-work  🔖 [Cheat sheet](/Cheatsheets/base-r.pdf)
