--- a/static/regression/regression1.Rmd
+++ b/static/regression/regression1.Rmd
@@ -250,7 +250,7 @@ background-size: contain
 
 
 ---
-## Pearson Correlation Coefficient
+## Pearson's Correlation Coefficient
 
 ![](karlpearson.jpg)
 
